# aletheia

./: EntityDiagramAletheia.excalidraw  Makefile  README.md  articles.txt  pyproject.toml  setup.py
.github/workflows/: build.yml
src/: module.py
src/aletheia/: __main__.py  analysis.py  app.py  base64_decode.py  cache.py  cli.py  config.py  get_article.py  get_similar_articles.py  llm.py  utils.py
src/your_project/: __init__.py  __main__.py  alien.txt  analysis.py  cli.py  config.py  get_article.py  get_similar_articles.py  llm.py  models.py  types.py
tests/: __init__.py  test_base64_decode.py  test_module.py  test_your_project.py
